# bevy-fun

./: Cargo.toml
.cargo/: config
.github/workflows/: build.yml  release.yml
src/: components.rs  main.rs
src/systems/: hello.rs  init.rs  inputs.rs  mod.rs
src/systems/ui/: debug.rs  diagnostics.rs  loader.rs  mod.rs
