[package]
name = "bevy-fun"
version = "0.1.0"
authors = ["Jimmie Fulton <jimmie@nirvana.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }

[profile.dev]
split-debuginfo = "unpacked"
